<resources>
    <string name="app_name">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alinaffe Joseph</string>
    <string name="nav_header_subtitle">alinaffejoseph@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_business">Business</string>
    <string name="menu_account">Account</string>
    <string name="menu_about">About</string>
    <string name="menu_give">Give</string>
    <string name="communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is about me</string>
</resources>