<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.navdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_business"
        android:name="com.example.navdrawer.ui.gallery.BusinessFragment"
        android:label="@string/menu_business"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.navdrawer.ui.slideshow.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.navdrawer.AboutFragment"
        android:label="fragment_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_give"
        android:name="com.example.navdrawer.GiveFragment"
        android:label="fragment_give"
        tools:layout="@layout/fragment_give" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.navdrawer.ShareFragment"
        android:label="fragment_share"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/nav_email"
        android:name="com.example.navdrawer.EmailFragment"
        android:label="fragment_email"
        tools:layout="@layout/fragment_email" />
</navigation>